resolved issues with images not showing up

--- a/client/main.css
+++ b/client/main.css
@@ -1,10 +1,10 @@
 /* CSS declarations go here */
 .js-image{
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
 .thumbnail{
-  width: 500px;
+  width: 100%;
   height: 500px;
 }
